Follow-up fix for bug#11717 - Modal dialogs in notification web view are now also scrollable on mobile devices.

--- a/var/httpd/htdocs/skins/Agent/default/css/Core.Dialog.css
+++ b/var/httpd/htdocs/skins/Agent/default/css/Core.Dialog.css
@@ -78,10 +78,10 @@
 }
 
 .Dialog > .Content > .InnerContent {
-    padding: 10px;
+    padding: 10px 25px 10px 10px;
     background: #FFF;
     overflow-y: auto;
-    overflow-x: hidden;
+    overflow-x: auto;
     max-height: 200px;
     position: relative;
 }
